finalize home page with featured content and its styles. fix overlap in dormbuddy main screen

--- a/public_html/scss/home.scss
+++ b/public_html/scss/home.scss
@@ -18,7 +18,14 @@ h3 {
   border: 2px solid black;
 }
 
-.home-featured {
+.home-featured-title {
+  font-size: 1.5rem;
+  margin: 0;
+}
+
+.home-featured-subtitle {
+  margin: 1rem 0;
+  font-size: 1.2rem;
 }
 
 .side-box {
