--- a/public_html/scss/projects.scss
+++ b/public_html/scss/projects.scss
@@ -416,7 +416,7 @@
 
 .db-widget {
   min-height: fit-content;
-  max-height:400px;
+  max-height:600px;
   img {
     max-width: 100%;
     min-height: 100%;
